[package]
name = "pixel_formats"
description = "Types for various pixel formats."
repository = "https://github.com/Lokathor/pixel_formats"
version = "0.1.5"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[features]
default = ["bytemuck", "bitfrob"]

[dependencies]
fast-srgb8 = "1.0.0"
bitfrob = { version = "1.0.0", optional = true }
bytemuck = { version = "1.13.1", features = ["derive"], optional=true }
